==> RT-Thread/rt-thread/bsp/gd32/risc-v/libraries/gd32_drivers/drv_pwm.c <==
#include <board.h>
#include <rtdevice.h>
#include <rtthread.h>
#define DBG_TAG             "drv.pwm"
#define DBG_LVL             DBG_LOG
#include <rtdbg.h>
#define MAX_PERIOD 65535
#define MIN_PERIOD 3
#define MIN_PULSE  2

static rt_err_t gd32_hw_pwm_init(void)
{
    pwm_find_timer_periph();
    rcu_config();
    gpio_config();
    timer_config();
    return RT_EOK;
}

static rt_err_t drv_pwm_enable(gd32_pwm_device_t *pstTimerMap,
                      struct rt_pwm_configuration *configuration,
                      rt_bool_t enable)
{
    uint32_t timer_periph = index_to_timer(pstTimerMap->TimerIndex);
    uint32_t channel = configuration->channel;
    
    if ((channel != TIMER_CH_0) &&
        (channel != TIMER_CH_1) &&
        (channel != TIMER_CH_2) &&
        (channel != TIMER_CH_3))
    {
        return -RT_EINVAL;
    }

    if (enable)
    {
        timer_channel_output_state_config(timer_periph, channel, TIMER_CCX_ENABLE);
    }
    else
    {
        timer_channel_output_state_config(timer_periph, channel, TIMER_CCX_DISABLE);
    }

    return RT_EOK;
}

static rt_err_t drv_pwm_set(gd32_pwm_device_t *pstTimerMap, struct rt_pwm_configuration *configuration)
{
    rt_uint32_t period, pulse;
    rt_uint64_t tim_clock, psc;
    tim_clock = rcu_clock_freq_get(CK_SYS);

    /* Convert nanosecond to frequency and duty cycle. 1s = 1 * 1000 * 1000 * 1000 ns */
    tim_clock /= 1000000UL;
    period     = (unsigned long long)configuration->period * tim_clock / 1000ULL;
    psc        = period / MAX_PERIOD + 1;
    period     = period / psc;

    timer_prescaler_config(index_to_timer(pstTimerMap->TimerIndex), psc - 1, TIMER_PSC_RELOAD_NOW);

    if (period < MIN_PERIOD)
    {
        period = MIN_PERIOD;
    }

    timer_autoreload_value_config(index_to_timer(pstTimerMap->TimerIndex), period - 1);

    pulse = (unsigned long long)configuration->pulse * tim_clock / psc / 1000ULL;
    if (pulse < MIN_PULSE)
    {
        pulse = MIN_PULSE;
    }
    else if (pulse > period)
    {
        pulse = period;
    }

    timer_channel_output_pulse_value_config(index_to_timer(pstTimerMap->TimerIndex), configuration->channel, pulse);
    timer_counter_value_config(index_to_timer(pstTimerMap->TimerIndex), 0);

    /* Update frequency value */
    timer_event_software_generate(index_to_timer(pstTimerMap->TimerIndex), TIMER_EVENT_SRC_UPG);

    return RT_EOK;
}

static rt_err_t drv_pwm_get(gd32_pwm_device_t *pstTimerMap, struct rt_pwm_configuration *configuration)
{
    rt_uint64_t tim_clock;
    rt_uint16_t psc;
    rt_uint32_t chxcv;

    tim_clock = rcu_clock_freq_get(CK_SYS);

    psc = timer_prescaler_read(index_to_timer(pstTimerMap->TimerIndex));
    if (psc == TIMER_CKDIV_DIV2)
    {
        tim_clock = tim_clock / 2;
    }
    else if (psc == TIMER_CKDIV_DIV4)
    {
        tim_clock = tim_clock / 4;
    }

    chxcv = timer_channel_capture_value_register_read(index_to_timer(pstTimerMap->TimerIndex), configuration->channel);
    /* Convert nanosecond to frequency and duty cycle. 1s = 1 * 1000 * 1000 * 1000 ns */
    tim_clock             /= 1000000UL;
    configuration->period  = (TIMER_CAR(index_to_timer(pstTimerMap->TimerIndex)) + 1) * (psc + 1) * 1000UL / tim_clock;
    configuration->pulse   = (chxcv + 1) * (psc + 1) * 1000UL / tim_clock;

    return RT_EOK;
}

static rt_err_t drv_pwm_control(struct rt_device_pwm *device, int cmd, void *arg)
{
    struct rt_pwm_configuration *configuration = (struct rt_pwm_configuration *)arg;
    gd32_pwm_device_t    *pstTimerMap   = (gd32_pwm_device_t *)device->parent.user_data;

    switch (cmd)
    {
    case PWM_CMD_ENABLE:
        return drv_pwm_enable(pstTimerMap, configuration, RT_TRUE);
    case PWM_CMD_DISABLE:
        return drv_pwm_enable(pstTimerMap, configuration, RT_FALSE);
    case PWM_CMD_SET:
        return drv_pwm_set(pstTimerMap, configuration);
    case PWM_CMD_GET:
        return drv_pwm_get(pstTimerMap, configuration);
    default:
        return -RT_EINVAL;
}
}

static int gd32_pwm_init(void)
{
    int i      = 0;
    int result = RT_EOK;

    /* pwm init */
    gd32_hw_pwm_init();
    LOG_D("PWM init success");

    for (i = 0; i < sizeof(gd32_pwm_obj) / sizeof(gd32_pwm_obj[0]); i++)
    {
        if (rt_device_pwm_register(&gd32_pwm_obj[i].pwm_device, gd32_pwm_obj[i].name, &drv_ops, &gd32_pwm_obj[i]) == RT_EOK)
        {
            LOG_D("%s register success", gd32_pwm_obj[i].name);
        }
        else
        {
            LOG_E("%s register failed", gd32_pwm_obj[i].name);
            result = -RT_ERROR;
        }
    }
    return result;
}
